--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         }
         .form-header p { color: var(--cor-cinza-claro); font-size: 1rem; max-width: 500px; margin: auto; }
         
-        #progress-bar { display: flex; list-style: none; margin-bottom: 2.5rem; position: relative; justify-content: space-between; }
-        #progress-bar .step { text-align: center; position: relative; width: 100%; color: var(--cor-cinza-claro); font-weight: 600; font-size: 0.85rem; transition: color 0.4s ease; }
+        #progress-bar { display: flex; list-style: none; margin-bottom: 2.5rem; position: relative; justify-content: space-between; padding: 0; }
+        #progress-bar .step { text-align: center; position: relative; flex: 1; color: var(--cor-cinza-claro); font-weight: 600; font-size: 0.8rem; transition: color 0.4s ease; word-break: break-word;}
         #progress-bar .step .dot { height: 25px; width: 25px; border: 2px solid var(--cor-cinza-claro); border-radius: 50%; display: inline-block; margin-bottom: 8px; transition: all 0.4s ease; background-color: var(--cor-fundo); }
         #progress-bar .step.active .dot { border-color: var(--cor-primaria); transform: scale(1.2); box-shadow: 0 0 10px var(--cor-primaria);}
         #progress-bar .step.completed .dot { background: var(--gradiente-principal); border-color: var(--cor-primaria); transform: scale(1.1); }
@@ -394,14 +394,14 @@
                      <div class="upsell-note-step hidden" id="upsell-sinfonia-audio">Para a experiência definitiva, o plano <strong class="universo-text">Universo Particular</strong> transforma tudo com uma <strong>mensagem secreta com senha</strong> e um <strong>contrato de amor</strong>.</div>
                     <div class="form-group">
                         <label>Envie Sua Declaração em Áudio</label>
-                        <small>Grave um áudio com sua voz no seu celular ou computador e envie o arquivo aqui. Aceitamos todos os formatos (MP3, M4A, WAV, etc.).</small>
+                        <small>Grave um áudio com sua voz ou envie um vídeo, o áudio será extraído automaticamente.</small>
                         
                         <div class="file-upload-wrapper" style="margin-top: 1.5rem;">
                             <div class="file-upload-btn">
                                 <i class="fas fa-upload"></i>
-                                <div>Clique para enviar um arquivo de áudio</div>
+                                <div>Clique para enviar áudio ou vídeo</div>
                             </div>
-                            <input type="file" id="audio-input" accept="audio/*">
+                            <input type="file" id="audio-input" accept="audio/*,video/*">
                         </div>
 
                         <div id="audio-preview-section" class="hidden" style="margin-top: 1.5rem;">
@@ -441,7 +441,7 @@
                      <div class="form-group hidden" id="pedido-detalhes-group">
                         <label for="pedido-detalhes">Descreva os Detalhes do Pedido</label>
                         <small>Como você imagina esse momento? Quais palavras usar? O que deve acontecer se a resposta for "Sim"? Conte tudo!</small>
-                        <textarea id="pedido-detalhes" name="detalhes_do_pedido" rows="5" placeholder="Ex: Após toda declaração, quero que a pergunta 'Quer casar comigo?' apareça. Se a resposta for sim, uma chuva de corações ou fogos de artifício"></textarea>
+                        <textarea id="pedido-detalhes" name="detalhes_do_pedido" rows="5" placeholder="Ex: Após a declaração em áudio, quero que a pergunta 'Quer casar comigo?' apareça. Se a resposta for sim, uma chuva de confetes e a nossa música..."></textarea>
                     </div>
                 </div>
 
