--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
 
                 <!-- Etapa 3: Paleta de Cores -->
                 <div class="form-step" data-step-name="Cores" data-packages="laco,sinfonia,universo">
-                    <div class="upsell-note-step hidden" id="upsell-laco-cores">Quer mais impacto? O plano <strong class="sinfonia-text">Nossa Sinfonia</strong> libera o <strong>dobro de fotos</strong> (10) e a emoção da <strong>sua voz</strong> se declarando!</div>
-                    <div class="upsell-note-step hidden" id="upsell-sinfonia-cores">Busca uma experiência inesquecível? O plano <strong class="universo-text">Universo Particular</strong> adiciona uma <strong>mensagem secreta com senha</strong> e o <strong>mapa astral</strong> do casal!</div>
+                    <div class="upsell-note-step hidden" id="upsell-laco-cores">Quer um presente ainda mais emocionante? Com o plano <strong class="sinfonia-text">Nossa Sinfonia</strong>, você pode incluir um áudio com sua voz e ter uma galeria com o dobro de fotos, tornando cada momento inesquecível.</div>
+                    <div class="upsell-note-step hidden" id="upsell-sinfonia-cores">Que tal transformar este presente em uma experiência mágica? O plano <strong class="universo-text">Universo Particular</strong> revela uma mensagem secreta com senha e o mapa astral do casal, criando uma conexão ainda mais profunda.</div>
                     <div class="form-group">
                         <label for="paleta">Universo Visual e Cores</label>
                         <small>Descreva o estilo que você imagina. Romântico, sofisticado, vibrante? Quais cores?</small>
@@ -344,8 +344,8 @@
 
                 <!-- Etapa 4: Essência -->
                 <div class="form-step" data-step-name="Essência" data-packages="laco,sinfonia,universo">
-                    <div class="upsell-note-step hidden" id="upsell-laco-essencia">Lembre-se: no plano <strong class="sinfonia-text">Nossa Sinfonia</strong> você pode enviar um <strong>áudio</strong> com sua voz e adicionar <strong>mensagens interativas</strong>!</div>
-                    <div class="upsell-note-step hidden" id="upsell-sinfonia-essencia">Para a declaração definitiva, o plano <strong class="universo-text">Universo Particular</strong> inclui um <strong>contrato de amor eterno</strong> e outros segredos.</div>
+                    <div class="upsell-note-step hidden" id="upsell-laco-essencia">Quer um presente ainda mais emocionante? Com o plano <strong class="sinfonia-text">Nossa Sinfonia</strong>, você pode incluir um áudio com sua voz e ter uma galeria com o dobro de fotos, tornando cada momento inesquecível.</div>
+                    <div class="upsell-note-step hidden" id="upsell-sinfonia-essencia">Que tal transformar este presente em uma experiência mágica? O plano <strong class="universo-text">Universo Particular</strong> revela uma mensagem secreta com senha e o mapa astral do casal, criando uma conexão ainda mais profunda.</div>
                     <div class="form-group">
                         <label for="carta">Sua Declaração</label>
                         <small>Escreva ou cole aqui o texto que será o coração do presente.</small>
@@ -360,8 +360,8 @@
 
                 <!-- Etapa 5: Música -->
                  <div class="form-step" data-step-name="Música" data-packages="laco,sinfonia,universo">
-                     <div class="upsell-note-step hidden" id="upsell-laco-musica">Uma música é ótimo! No plano <strong class="sinfonia-text">Nossa Sinfonia</strong>, você também pode adicionar <strong>sua voz</strong> e um <strong>jogo interativo</strong>.</div>
-                     <div class="upsell-note-step hidden" id="upsell-sinfonia-musica">Além da playlist, que tal um <strong>mapa astral</strong> e uma <strong>mensagem secreta com senha</strong>? Tudo isso no plano <strong class="universo-text">Universo Particular</strong>.</div>
+                     <div class="upsell-note-step hidden" id="upsell-laco-musica">Quer um presente ainda mais emocionante? Com o plano <strong class="sinfonia-text">Nossa Sinfonia</strong>, você pode incluir um áudio com sua voz e ter uma galeria com o dobro de fotos, tornando cada momento inesquecível.</div>
+                     <div class="upsell-note-step hidden" id="upsell-sinfonia-musica">Que tal transformar este presente em uma experiência mágica? O plano <strong class="universo-text">Universo Particular</strong> revela uma mensagem secreta com senha e o mapa astral do casal, criando uma conexão ainda mais profunda.</div>
                     <div class="form-group" id="laco-sinfonia-music-group">
                         <label>Música do Casal</label>
                         <small>Cole aqui o link de uma música do Spotify.</small>
@@ -377,8 +377,8 @@
 
                 <!-- Etapa 6: Memórias (Uploads) -->
                 <div class="form-step" data-step-name="Memórias" data-packages="laco,sinfonia,universo">
-                    <div class="upsell-note-step hidden" id="upsell-laco-memorias">Gostando de escolher as fotos? O plano <strong class="sinfonia-text">Nossa Sinfonia</strong> permite enviar o <strong>dobro (10 fotos)</strong> e ainda incluir um <strong>áudio com sua voz</strong>!</div>
-                    <div class="upsell-note-step hidden" id="upsell-sinfonia-memorias">Para uma surpresa ainda mais profunda, o plano <strong class="universo-text">Universo Particular</strong> adiciona interações exclusivas como o <strong>mapa astral</strong>.</div>
+                    <div class="upsell-note-step hidden" id="upsell-laco-memorias">Quer um presente ainda mais emocionante? Com o plano <strong class="sinfonia-text">Nossa Sinfonia</strong>, você pode incluir um áudio com sua voz e ter uma galeria com o dobro de fotos, tornando cada momento inesquecível.</div>
+                    <div class="upsell-note-step hidden" id="upsell-sinfonia-memorias">Que tal transformar este presente em uma experiência mágica? O plano <strong class="universo-text">Universo Particular</strong> revela uma mensagem secreta com senha e o mapa astral do casal, criando uma conexão ainda mais profunda.</div>
                     <div class="form-group">
                         <label>Galeria de Momentos</label>
                         <small>Adicione as fotos que marcaram a história de vocês.</small>
@@ -391,7 +391,7 @@
                 
                 <!-- Etapa 7: Áudio -->
                 <div class="form-step" data-step-name="Sinfonia" data-packages="sinfonia,universo">
-                     <div class="upsell-note-step hidden" id="upsell-sinfonia-audio">Para a experiência definitiva, o plano <strong class="universo-text">Universo Particular</strong> transforma tudo com uma <strong>mensagem secreta com senha</strong> e um <strong>contrato de amor</strong>.</div>
+                     <div class="upsell-note-step hidden" id="upsell-sinfonia-audio">Que tal transformar este presente em uma experiência mágica? O plano <strong class="universo-text">Universo Particular</strong> revela uma mensagem secreta com senha e o mapa astral do casal, criando uma conexão ainda mais profunda.</div>
                     <div class="form-group">
                         <label>Envie Sua Declaração em Áudio</label>
                         <small>Grave um áudio com sua voz ou envie um vídeo, o áudio será extraído automaticamente.</small>
@@ -712,7 +712,7 @@
             audioFileToSubmit = file;
             const audioUrl = URL.createObjectURL(file);
             audioPlaybackElement.src = audioUrl;
-            audioUploadStatus.textContent = `Áudio selecionado: ${file.name}`;
+            audioUploadStatus.textContent = `Arquivo selecionado: ${file.name}`;
             audioPreviewSection.classList.remove('hidden');
         }
 
